Do not surface test JVM args in the JVM run environment
getBuildTargetJvmRunEnvironment shared the collector with the test variant, so the matching Test task's JVM args (e.g. --add-opens) leaked into the run environment, which is test-specific and semantically wrong for running main.

- Parameterize collectJvmEnvironmentItems with isTestEnvironment; only the test environment surfaces the Test task's jvmArgs as jvmOptions

- Run environment leaves jvmOptions empty until run/application JVM args and mainClasses are modelled

- Add testGetBuildTargetJvmRunEnvironment asserting no test args leak